Add get all sellers data
