# internal/api/v1/seller/handler.go
@@ -22,6 +22,8 @@ func NewSellerHandler(s *SellerServer) *sellerHandle {
 
 type SellerServer interface {
 	Get(id uuid.UUID) (specs.Seller, error)
+	GetAll() ([]specs.Seller, error)
+	GetByName(name string) ([]specs.Seller, error)
 	Create(seller specs.Seller) (specs.Seller, error)
 }
 
@@ -47,6 +49,68 @@ func (h *sellerHandle) GetSeller(w http.ResponseWriter, r *http.Request, id stri
 
 	// Convert to JSON
 	data, err := json.Marshal(seller)
+	if err != nil {
+		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
+		return
+	}
+
+	// Return to caller
+	_, err = w.Write(data)
+	if err != nil {
+		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
+		return
+	}
+}
+
+func (h *sellerHandle) GetSellersAll(w http.ResponseWriter, r *http.Request) {
+	api := "GetSeller (/api/v1/sellers/id/all)"
+
+	// Get Sellers
+	sellers, err := h.GetAll()
+	if err == errs.ErrNotFound {
+		httperr.Send(w, http.StatusNotFound, "%s: %s", api, err.Error())
+		return
+	}
+	if err != nil {
+		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
+		return
+	}
+
+	// Convert to JSON
+	data, err := json.Marshal(sellers)
+	if err != nil {
+		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
+		return
+	}
+
+	// Return to caller
+	_, err = w.Write(data)
+	if err != nil {
+		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
+		return
+	}
+}
+
+func (h *sellerHandle) GetSellersByName(w http.ResponseWriter, r *http.Request, params specs.GetSellersByNameParams) {
+	api := "GetByName (/api/v1/sellers/search)"
+
+	if params.Name == "" {
+		httperr.Send(w, http.StatusBadRequest, "%s empty seller name", api)
+		return
+	}
+
+	sellers, err := h.GetByName(params.Name)
+	if err == errs.ErrNotFound {
+		httperr.Send(w, http.StatusNotFound, "%s seller %s not found", api, params.Name)
+		return
+	}
+	if err != nil {
+		httperr.Send(w, http.StatusBadRequest, "%s failed to find sellers", api)
+		return
+	}
+
+	// Convert to JSON
+	data, err := json.Marshal(sellers)
 	if err != nil {
 		httperr.Send(w, http.StatusInternalServerError, "%s: failed: %s", api, err.Error())
 		return
